# cargoc

./: Cargo.toml  build.lua  cargoc.lua
cbuild/: Cargo.toml
cbuild/src/: file.rs  graph.rs  lib.rs
src/: build.rs  main.rs
