[package]
name = "cargoc"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cbuild"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.4"
thiserror = "2.0.17"
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
mlua = { version = "0.10.3", features = ["lua54", "vendored", "async", "send", "error-send", "serialize", "macros", "userdata-wrappers"] }

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
mlua = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
toml = "0.5.9"
cbuild = { path = "./cbuild/" }
tracing-subscriber = "0.3.18"
path-absolutize = "3.0.13"
curl = "0.4.46"
